# tree-readme

./: .gitignore  README.md  install_package.sh  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
readme_generator/: __init__.py  emoji_map.py  generate_readme.py  readme_builder.py  repo_structure.py
tests/: test_readme_generator.py
