[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["readme_generator", "readme_generator.*"]

[project]
name = "tree-readme"
version = "2.3.0"
description = "Generate clear, structured README files from your repository tree."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Jakub Kościan", email = "kuba.koscian001@gmail.com" },
]
maintainers = [
    { name = "Jakub Kościan", email = "kuba.koscian001@gmail.com" },
]
keywords = ["readme", "generator", "python", "project"]
dynamic = ["dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
[project.optional-dependencies]
dev = [
    "bandit>=1.7.9",
    "black>=24.8.0",
    "build>=1.2.2",
    "mypy>=1.11.2",
    "pip-audit>=2.8.0",
    "pipdeptree>=2.23.4",
    "pipreqs>=0.5.0",
    "pylint>=3.2.7",
    "pytest>=8.4.1",
    "twine>=5.1.1",
]

[project.urls]
Homepage = "https://github.com/kvbiii/tree-readme"
Repository = "https://github.com/kvbiii/tree-readme"
Issues = "https://github.com/kvbiii/tree-readme/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
extend-exclude = "(examples)"

[tool.pylint.main]
ignore-paths = ["^\\.venv/", "^dist/", "^build/"]

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "unused-import",
    "wrong-import-order",
    "unused-variable",
    "missing-function-docstring",
    "missing-module-docstring",
    "invalid-name",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = [
    "^\\.venv/",
    "^dist/",
    "^build/",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", "dist", "build"]
severity = "LOW"
confidence = "MEDIUM"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["readme_generator"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
