[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["readme_generator", "readme_generator.*"]

[project]
name = "tree-readme"
version = "3.0.0"
description = "Generate clear, structured README files from your repository tree."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Jakub Kościan", email = "kuba.koscian001@gmail.com" },
]
maintainers = [
    { name = "Jakub Kościan", email = "kuba.koscian001@gmail.com" },
]
keywords = ["readme", "generator", "python", "project"]
dynamic = ["dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/kvbiii/tree-readme"
Repository = "https://github.com/kvbiii/tree-readme"
Issues = "https://github.com/kvbiii/tree-readme/issues"